[gd_scene load_steps=7 format=3 uid="uid://u633ixxtrd4u"]

[ext_resource type="Script" path="res://levels/level_2.gd" id="1_level2"]
[ext_resource type="TileSet" uid="uid://cn6a27lw6v5xa" path="res://assets/tiles/tile_set.tres" id="2_tileset"]
[ext_resource type="PackedScene" uid="uid://dq4t3fc0e4a4a" path="res://scenes/door.tscn" id="3_door"]
[ext_resource type="PackedScene" uid="uid://bmtmrg6sdimhd" path="res://scenes/player.tscn" id="4_player"]
[ext_resource type="PackedScene" uid="uid://bwpq3n0husxu5" path="res://ui/UIManager.tscn" id="11_ui"]
[ext_resource type="PackedScene" uid="uid://c5a7x3dhxd6ck" path="res://ui/MiniMap.tscn" id="12_sntum"]

[node name="Level2" type="Node2D"]
script = ExtResource("1_level2")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_tileset")
format = 2

[node name="Player" parent="." instance=ExtResource("4_player")]
position = Vector2(32, 168)

[node name="DoorRoot" type="Node2D" parent="."]

[node name="Door_entrance" parent="DoorRoot" instance=ExtResource("3_door")]
position = Vector2(16, 168)

[node name="Door_exit" parent="DoorRoot" instance=ExtResource("3_door")]
position = Vector2(480, 168)
type = 1

[node name="UIManager" parent="." instance=ExtResource("11_ui")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MiniMap" parent="CanvasLayer" instance=ExtResource("12_sntum")]
offset_left = -433.0
offset_top = 19.0
offset_right = -233.0
offset_bottom = 219.0
